frontend/scss/molecules/_m-title-bar.scss
.m-title-bar {
  display: flex;
  position: relative;
  flex-flow: row wrap;
  justify-content: space-between;
  margin-top: 48px;
  padding-top: .02px;

  @include breakpoint('small+') {
    margin-top: 60px;
  }

  @include breakpoint('large+') {
    margin-top: 72px;
  }

  &.m-title-bar--no-hr,
  hr + &,
  .hr + &,
  .m-links-bar--filters + &,
  .o-features + & {
    margin-top: 0;

    &::before {
      content: none;
      display: none;
    }
  }
}

.m-title-bar::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  height: 1px;
  background-color: $color__rules--quaternary;
}

.m-title-bar .title {
  flex: 0 0 auto;
  margin-top: 0;
  margin-right: auto;
}

.m-title-bar .title.f-module-title-2 {
  @include tucked-margin-top($f-module-title-2, ('xsmall': 60, 'small+': 68, 'medium+': 80));
}

.m-title-bar .title.f-numeral-date {
  @include tucked-margin-top($f-numeral-date, ('xsmall': 60, 'small+': 68, 'medium+': 80));
}

.m-title-bar__links {
  display: none;
  flex: 0 0 auto;
  flex-flow: row wrap;
  margin-top: 0;
  margin-left: auto;

  @include breakpoint('small+') {
    display: flex;
    margin-top: auto;
  }
}

.m-title-bar__links li {
  flex: 0 0 auto;
  margin-left: 20px;
}

.m-title-bar__links a {
  color: $color__link;

  &:hover,
  &:focus:hover {
    color: $color__link--hover;
  }

  &:active:hover {
    color: $color__link--active;
  }
}

.m-title-bar__links span {
  color: $color__text--secondary;
}

